# path_tracer

./: .gitignore  CMakeLists.txt
scenes/car/: LICENSE.txt  scene.xml
scenes/furball/: LICENSE.txt  scene.xml
scenes/hair-curl/: scene.xml
scenes/house/: LICENSE.txt  scene.xml
scenes/straight-hair/: LICENSE.txt  scene.xml
src/: BMPImage.cpp  BMPImage.hpp  Camera.cpp  Camera.hpp  ConcurrencyManager.cpp  ConcurrencyManager.hpp  Utils.cpp  Utils.hpp  main.cpp  math.hpp
src/Scene/: Material.hpp  Plane.cpp  Plane.hpp  Primitive.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Scene/Primitives/: Plane.cpp  Plane.hpp  Primitive.hpp  Primitives.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.hpp  Triangle.cpp
test/: CMakeLists.txt  Plane.cpp  math.cpp
